--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17485 2017/06/27 12:22:53 wiz Exp $
+$NetBSD: TODO,v 1.17486 2017/07/02 14:28:58 seb Exp $
 
 Suggested new packages
 ======================
@@ -1611,7 +1611,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o xosview-1.19
 	o xpaint-2.9.9
 	o xpmroot-2.7.0
-	o xpuyopuyo-0.9.8
 	o xrmap-base-2.33.1
 	o xrmap-factbook_html-2008
 	o xrmap-factbook_text-2008
