--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17486 2017/07/02 14:28:58 seb Exp $
+$NetBSD: TODO,v 1.17487 2017/07/02 21:58:38 wiz Exp $
 
 Suggested new packages
 ======================
@@ -361,7 +361,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o LPRng-core-3.8.35
 	o Mesa-17.1.3
 	o MesaDemos-8.3.0
-	o MesaLib-17.1.3
+	o MesaLib-17.1.4
 	o OdfConverter-4.0
 	o PACK-0.0.4
 	o PAM-0.99.7.1
@@ -392,6 +392,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o aegis-4.25
 	o aewm++-1.1.5
 	o afbinit-1.0.1
+	o afl-2.44b
 	o afterstep-2.2.12
 	o aget-0.4.1
 	o aide-0.16
@@ -462,6 +463,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o bind-9.11.0
 	o binutils-2.28
 	o bird6-1.5.0
+	o blas-3.7.1
 	o blender-2.79
 	o bliz++-0.10
 	o blur6ex-0.3.462
@@ -483,7 +485,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cal3d-0.11.0
 	o calc-2.11.10.1
 	o calcoo-2.1.0
-	o calibre-3.0
+	o calibre-3.2.1
 	o calligra-2.9.9 [in wip; koffice successor]
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-1.1
@@ -530,6 +532,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o crossfire-1.71.0
 	o crossfire-client-gtk2-1.60.0
 	o csharp-mysql-6.9.8
+	o cups-2.2.4
 	o cvs2p4-2.5.5
 	o cvsgraph-1.7.0
 	o cvsutils-0.2.6
@@ -546,6 +549,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o darktable-2.2.0
 	o dasher-4.11
 	o dateutils-0.4.1
+	o dbus-1.10.20
 	o dd_rescue-1.46
 	o dd_rhelp-0.3.0
 	o ddrescue-1.21
@@ -685,7 +689,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o gbrainy-2.27
 	o gcal-4
 	o gcin-1.5.5
-	o gcloud-golang-metadata-0.9.0
+	o gcloud-golang-metadata-0.10.0
 	o gcombust-0.1.55
 	o gcompris-15.02
 	o gdb6-6.8a
@@ -926,6 +930,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o kdevelop4-4.7.2
 	o kdevplatform-1.7.1
 	o keybinder-0.3.1
+	o khal-0.9.6
 	o kipi-plugins-4.14.0
 	o kismet-2011.03r2 [pkg/45692]
 	o kismet-2013.03R1b
@@ -945,6 +950,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o kstart-4.2
 	o ktorrent3-3.3.4
 	o labelnation-1.218
+	o lapack-3.7.1
 	o latex2html-2015
 	o lbdb-0.40
 	o lcc-4.2
@@ -960,6 +966,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libextractor-1.2 [requires shm_open()]
 	o libflash-0.4.13
 	o libfolks-0.10.1
+	o libgcrypt-1.7.8
 	o libgdiplus-4.2
 	o libgfshare-2.0.0
 	o libgiigic-1.1.2
@@ -981,7 +988,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libmilter-8.16.0.16
 	o libmtag-0.3.6
 	o liboobs-2.32.0 [GNOME 2.32]
-	o libopus-1.2
+	o libopus-1.2.1
 	o libpgm-5.2.122
 	o libprelude-3.1.0
 	o libpreludedb-3.1.0
@@ -1029,7 +1036,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o makeself-2.2.0
 	o maketool-0.8.4
 	o makeztxt-1.60
-	o mame-0.186
+	o mame-0.187
 	o manedit-1.2.1
 	o mapserver-7.0.1
 	o matchbox-panel-0.9.3
@@ -1152,6 +1159,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-Catalyst-Engine-PSGI-0.14
 	o p5-Chart-3.2
 	o p5-DBD-DB2-1.85
+	o p5-File-ShareDir-1.104
 	o p5-FormValidator-Simple-1.00
 	o p5-GStreamer-0.20
 	o p5-GraphViz2-2.37
@@ -1161,6 +1169,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-Heap-1.04
 	o p5-IP-Country-3.03
 	o p5-Memoize-Memcached-0.11
+	o p5-Net-DNS-1.11
 	o p5-Net-ManageSieve-0.13
 	o p5-NetPacket-1.6.0
 	o p5-Netdisco-2.033001
@@ -1185,8 +1194,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o p5-SDL-2.544 [wip, make sure games/frozen-bubble runs, may require p5-SDL_perl]
 	o p5-SVG-Graph-0.0402
 	o p5-SVN-Simple-0.312
+	o p5-Specio-0.38
 	o p5-Sys-Utmp-1.7
 	o p5-Text-Hunspell-2.14
+	o p5-WWW-Mechanize-1.85
 	o p5-X11-Protocol-29
 	o p5-eBay-API-0.29
 	o p5-gtk2-1.300
@@ -1198,6 +1209,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pam-saml-1.5
 	o pam-yubico-2.21
 	o pan-0.140
+	o par2-0.7.3
 	o paragui-1.1.8
 	o pari-2.9.2
 	o parrot-7.11.0
@@ -1243,6 +1255,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pks-0.9.6
 	o plan-1.10.1
 	o ploticus-examples-230
+	o png-1.6.30
 	o poco-1.7.5
 	o podcastdl-0.3.3
 	o pokerth-1.0.1
@@ -1304,6 +1317,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-newt-0.52.18
 	o py-notify-0.3.1
 	o py-numpydoc-0.6.0
+	o py-oauth2client-4.1.2
 	o py-omniORBpy-3.7
 	o py-pbr-3.1.1
 	o py-pdf-parser-0.6.4
@@ -1320,6 +1334,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-sqlalchemy-migrate-0.10.0
 	o py-suds-0.4.1
 	o py-sybase-0.37
+	o py-vdirsyncer-0.16.0
 	o py-wxWidgets-3.0.0
 	o py-yubiauth-0.3.10
 	o py-zconfig-3.0.3
@@ -1387,6 +1402,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o scew-1.1.7
 	o scilab-5.5.2
 	o scm-5f2
+	o screen-4.6.0
 	o scribus-1.5.2
 	o scripts-1.0.1
 	o scrollz-2.3
@@ -1466,6 +1482,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o swi-prolog-packages-7.1.37
 	o swt-4.5
 	o sympa-6.2.14
+	o syncthing-0.14.31
 	o sysinfo-4.2.2
 	o system-tools-backends-2.10.1 [needs polkit|GNOME 2.30]
 	o systrace-1.6e
@@ -1496,6 +1513,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o tfmxplay-1.1.6
 	o thaixfonts-1.2.7
 	o thttpd-2.27
+	o thunderbird-enigmail-1.9.8
 	o tig-2.2
 	o tigervnc-1.8.0
 	o tightvnc-2.7.10
@@ -1509,6 +1527,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o tomboy-1.10.2
 	o top-3.8beta1
 	o topgit-0.8
+	o tor-0.3.0.9
 	o tor-browser-7.0.1
 	o totem-3.14.1
 	o totem-pl-parser-3.10.3
@@ -1543,8 +1562,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o vice-3.0
 	o vicq-0.4.2
 	o vile-9.8q
-	o vim-8.0.0673
-	o vim-share-8.0.0673
+	o vim-8.0.0692
+	o vim-share-8.0.0692
 	o vinagre-3.16.1
 	o vino-3.16.0
 	o virt-manager-1.3.2
@@ -1562,6 +1581,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o wcalc-2.4
 	o webalizer-2.23.05
 	o webkit-gtk-2.16.0
+	o webkit24-gtk-2.16.5
 	o websvn-2.3.3
 	o weewm-0.01
 	o wgetpaste-2.26
@@ -1578,7 +1598,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o wxGTK-3.1.0
 	o wxGTK30-3.0.3
 	o wxRemind-101
-	o x264-devel-20170624
+	o x264-devel-20170701
 	o x2vnc-1.31
 	o xa65-2.3.7
 	o xaric-0.13.7
