--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17487 2017/07/02 21:58:38 wiz Exp $
+$NetBSD: TODO,v 1.17488 2017/07/03 08:37:23 leot Exp $
 
 Suggested new packages
 ======================
@@ -1580,8 +1580,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o warzone2100-2.3.8
 	o wcalc-2.4
 	o webalizer-2.23.05
-	o webkit-gtk-2.16.0
-	o webkit24-gtk-2.16.5
+	o webkit-gtk-2.16.5 [wip; please see TODO though]
 	o websvn-2.3.3
 	o weewm-0.01
 	o wgetpaste-2.26
