--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.17488 2017/07/03 08:37:23 leot Exp $
+$NetBSD: TODO,v 1.17489 2017/07/03 11:07:11 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1255,7 +1255,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o pks-0.9.6
 	o plan-1.10.1
 	o ploticus-examples-230
-	o png-1.6.30
 	o poco-1.7.5
 	o podcastdl-0.3.3
 	o pokerth-1.0.1
