--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18866 2019/03/05 11:19:52 ryoon Exp $
+$NetBSD: TODO,v 1.18867 2019/03/06 16:57:32 leot Exp $
 
 Suggested new packages
 ======================
@@ -648,7 +648,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ghc-8.2
 	o ghc7-7.10.1
 	o ghdl-0.33
-	o girara-0.3.2 [needs meson-0.48, leot]
 	o gkrellm-2.3.5
 	o gkrellm-multiping-2.0.13
 	o gkrellm-server-2.3.5
