--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18868 2019/03/06 17:02:31 leot Exp $
+$NetBSD: TODO,v 1.18869 2019/03/10 10:34:40 wiz Exp $
 
 Suggested new packages
 ======================
@@ -339,6 +339,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o GMT-5.1.1
 	o GNUMail-1.2.2
 	o Gorm-1.2.22
+	o ImageMagick-7.0.8.32
 	o JBidwatcher-2.5.6 [wants launch4j]
 	o LPRng-core-3.8.35
 	o OdfConverter-4.0
@@ -445,14 +446,17 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o bzr-svn-1.2.2
 	o bzrtools-2.6.0
 	o c4-1.10
+	o cabextract-1.9.1
 	o caff-2.9
 	o cal3d-0.11.0
 	o calc-2.11.10.1
 	o calcoo-2.1.0
+	o calibre-3.40.1
 	o calligra-3.0.1 [in wip; koffice successor]
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-1.1
 	o catdoc-tk-1.1
+	o cbindgen-0.8.2
 	o cc65-2.17
 	o cddbd-1.5.2
 	o cdrkit-1.1.10
@@ -956,6 +960,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o mapserver-7.0.1
 	o matchbox-panel-0.9.3
 	o mbedtls1-1.3.22
+	o mblaze-0.5.1
 	o mbuf-20141227
 	o mcollective-2.3.2
 	o mcsim-5.6.5
@@ -1013,6 +1018,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o netio-1.32
 	o netramet-50
 	o newmail-1.0.2
+	o notmuch-0.28.3
 	o ns-3.14.1
 	o ns-plugger-common-5.1.3
 	o ntop-5.0
@@ -1139,6 +1145,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-ptt-1.10.2
 	o py-pycountry-1.20
 	o py-pygit2-0.27.4 [incompatible to pkgsrc libgit2 0.28]
+	o py-scandir-1.10.0
 	o py-simpletal-5.1
 	o py-spf-2.0.12t
 	o py-sybase-0.37
@@ -1320,12 +1327,14 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ufoai-2.3.1
 	o uhttpmock-0.5.0
 	o unicap-0.9.8
+	o unifont-12.0.01
 	o unison-2.48.15v4
 	o units-2.12
 	o urlgrabber-3.10.1
 	o userppp-030706
 	o userspace-rcu-0.9.1
 	o utilisp-1.14
+	o vala-0.44.0
 	o varnish-5.1.3
 	o varnish-6.0
 	o vbetool-1.1
