--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18869 2019/03/10 10:34:40 wiz Exp $
+$NetBSD: TODO,v 1.18870 2019/03/10 10:51:30 leot Exp $
 
 Suggested new packages
 ======================
@@ -1327,7 +1327,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ufoai-2.3.1
 	o uhttpmock-0.5.0
 	o unicap-0.9.8
-	o unifont-12.0.01
 	o unison-2.48.15v4
 	o units-2.12
 	o urlgrabber-3.10.1
