--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18870 2019/03/10 10:51:30 leot Exp $
+$NetBSD: TODO,v 1.18871 2019/03/11 14:41:27 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -1018,7 +1018,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o netio-1.32
 	o netramet-50
 	o newmail-1.0.2
-	o notmuch-0.28.3
 	o ns-3.14.1
 	o ns-plugger-common-5.1.3
 	o ntop-5.0
