--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18871 2019/03/11 14:41:27 ryoon Exp $
+$NetBSD: TODO,v 1.18872 2019/03/13 06:30:39 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1004,6 +1004,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o munin-node-1.4.6
 	o munin-server-1.4.6
 	o muse-0.9.2
+	o mutt-1.11.4
 	o myodbc-5.3.4
 	o mysql-server-8.0.15
 	o mysql-workbench-6.3
