--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18875 2019/03/14 08:15:44 tron Exp $
+$NetBSD: TODO,v 1.18876 2019/03/15 13:06:30 ryoon Exp $
 
 Suggested new packages
 ======================
@@ -456,7 +456,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o cardboard-schedule-1.14c [at http://www.bright-green.com/downloads/]
 	o catdoc-1.1
 	o catdoc-tk-1.1
-	o cbindgen-0.8.2
 	o cc65-2.17
 	o cddbd-1.5.2
 	o cdrkit-1.1.10
