--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.18876 2019/03/15 13:06:30 ryoon Exp $
+$NetBSD: TODO,v 1.18877 2019/03/16 10:50:48 leot Exp $
 
 Suggested new packages
 ======================
@@ -597,7 +597,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o festival-2.4
 	o fet-5.28.6
 	o fetchyahoo-2.14.0
-	o file-5.33
 	o filerunner-14.06.18.10
 	o fillets-ng-0.7.4
 	o fillets-ng-data-0.7.4
