doc: Updated graphics/MesaLib to 19.1.4

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19212 2019/08/20 18:04:05 wiz Exp $
+$NetBSD: TODO,v 1.19213 2019/08/22 17:24:18 nia Exp $
 
 Suggested new packages
 ======================
@@ -389,7 +389,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o Gorm-1.2.22
 	o JBidwatcher-2.5.6 [wants launch4j]
 	o LPRng-core-3.8.35
-	o MesaLib-19.1.4
 	o OdfConverter-4.0
 	o PACK-0.0.4
 	o PAM-0.99.7.1
