--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19213 2019/08/22 17:24:18 nia Exp $
+$NetBSD: TODO,v 1.19214 2019/08/22 21:38:11 sevan Exp $
 
 Suggested new packages
 ======================
@@ -1034,6 +1034,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o nessus-4.4.1
 	o netbt-hcidump-5.37
 	o nethack-3.6.2
+	o netsurf-3.9
 	o netio-1.32
 	o netramet-50
 	o newmail-1.0.2
