--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19218 2019/08/24 10:54:47 jaapb Exp $
+$NetBSD: TODO,v 1.19219 2019/08/25 09:37:19 wiz Exp $
 
 Suggested new packages
 ======================
@@ -387,8 +387,10 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o GMT-5.1.1
 	o GNUMail-1.2.2
 	o Gorm-1.2.22
+	o ImageMagick-7.0.8.62
 	o JBidwatcher-2.5.6 [wants launch4j]
 	o LPRng-core-3.8.35
+	o MesaLib-19.1.5
 	o OdfConverter-4.0
 	o PACK-0.0.4
 	o PAM-0.99.7.1
@@ -407,6 +409,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o adms-2.3.5
 	o adocman-0.13
 	o adodb-5.20.7 [security]
+	o adwaita-icon-theme-3.32.0
 	o aegis-4.25
 	o aewm++-1.1.5
 	o afbinit-1.0.1
@@ -531,6 +534,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o crossfire-1.71.0
 	o crossfire-client-gtk2-1.60.0
 	o csharp-mysql-6.9.8
+	o cups-base-2.3.0
 	o cvsutils-0.2.6
 	o cxref-1.6e
 	o cygwin_lib-1.5.24.2
@@ -670,6 +674,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o geany-plugins-1.34.1
 	o gecko-mediaplayer-1.0.9b
 	o gedit-plugins-2.32.0
+	o geeqie-1.5.1
 	o genius-1.0.21
 	o gens-2.15.5
 	o gentoo-0.20.4
@@ -769,6 +774,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o h323plus-1.24.0 [replaces openh323, from http://www.h323plus.org/]
 	o hamster-applet-2.32.1
 	o hanzim-3.5
+	o harfbuzz-2.6.1
 	o harminv-1.4
 	o haskell-mode-13.20
 	o hatari-2.2.0
@@ -917,6 +923,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o libfolks-0.10.1 [wip]
 	o libgfshare-2.0.0
 	o libgiigic-1.1.2
+	o libgit2-0.28.3
 	o libgnomedb-3.1.2
 	o libgnomekbd-3.4.0.2
 	o libgphoto2-2.5.16
@@ -962,6 +969,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o lua-sql-mysql-2.3.5
 	o lv2-5.4
 	o lwm-1.2.4
+	o lz4-1.9.2
 	o lzma-9.18
 	o mDNSResponder-878.30.4
 	o mDNSResponder-nss-576.30.4
@@ -1022,6 +1030,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o munin-node-1.4.6
 	o munin-server-1.4.6
 	o muse-0.9.2
+	o musicpd-0.21.14
 	o myodbc-5.3.4
 	o mysql-connector-c++-8.0.17
 	o mysql-server-8.0.15
@@ -1121,6 +1130,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o polkit-0.116 [needs mozjs-60]
 	o polsms-2.1.0
 	o poppass-4.0.14
+	o poppler-0.80.0
 	o postal-0.72
 	o pound-2.8a
 	o povray-3.7.0.0
@@ -1159,12 +1169,14 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-pendrell-0.3.7
 	o py-ptt-1.10.2
 	o py-pycountry-1.20
+	o py-setuptools-41.2.0
 	o py-simpletal-5.1
 	o py-snowballstemmer-1.9.0
 	o py-spf-2.0.12t
 	o py-sybase-0.37
 	o py-wxWidgets-4.0.0
 	o py-yubiauth-0.3.10
+	o py-zipp-0.6.0
 	o pythontidy-1.23
 	o qbzr-0.23.2
 	o qdirstat-1.6
@@ -1308,7 +1320,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o tex2page-20130325
 	o texmaker-5.0.2
 	o tfmxplay-1.1.6
-	o thunderbird-enigmail-2.1.1 [needs thunderbird-68.0]
+	o thunderbird-enigmail-2.1.2 [needs thunderbird-68.0]
 	o tig-2.2
 	o tightvnc-2.7.10
 	o tile-0.7.4
