--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19219 2019/08/25 09:37:19 wiz Exp $
+$NetBSD: TODO,v 1.19220 2019/08/25 12:38:33 adam Exp $
 
 Suggested new packages
 ======================
@@ -1171,7 +1171,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o py-pycountry-1.20
 	o py-setuptools-41.2.0
 	o py-simpletal-5.1
-	o py-snowballstemmer-1.9.0
 	o py-spf-2.0.12t
 	o py-sybase-0.37
 	o py-wxWidgets-4.0.0
