--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19220 2019/08/25 12:38:33 adam Exp $
+$NetBSD: TODO,v 1.19221 2019/08/25 17:54:48 ng0 Exp $
 
 Suggested new packages
 ======================
@@ -557,7 +557,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o dikt-2s1
 	o dinotrace-9.4d
 	o dnssec-tools-2.2
-	o docbook2mdoc-1.0.0 [wip]
 	o doclifter-2.16
 	o dolphin-5.0
 	o drivel-3.0.5
