--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19221 2019/08/25 17:54:48 ng0 Exp $
+$NetBSD: TODO,v 1.19222 2019/08/26 07:11:33 adam Exp $
 
 Suggested new packages
 ======================
@@ -968,7 +968,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o lua-sql-mysql-2.3.5
 	o lv2-5.4
 	o lwm-1.2.4
-	o lz4-1.9.2
 	o lzma-9.18
 	o mDNSResponder-878.30.4
 	o mDNSResponder-nss-576.30.4
