--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19222 2019/08/26 07:11:33 adam Exp $
+$NetBSD: TODO,v 1.19223 2019/08/26 14:01:40 nia Exp $
 
 Suggested new packages
 ======================
@@ -390,7 +390,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o ImageMagick-7.0.8.62
 	o JBidwatcher-2.5.6 [wants launch4j]
 	o LPRng-core-3.8.35
-	o MesaLib-19.1.5
 	o OdfConverter-4.0
 	o PACK-0.0.4
 	o PAM-0.99.7.1
