--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.19223 2019/08/26 14:01:40 nia Exp $
+$NetBSD: TODO,v 1.19224 2019/08/26 14:02:56 wiz Exp $
 
 Suggested new packages
 ======================
@@ -637,6 +637,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o flow-tools-0.411
 	o flpsed-0.7.3
 	o fltk2-2.0pre8323
+	o font-util-1.3.2
 	o fop-2.1
 	o fortunes-calvin-0.3
 	o freeciv-2.6.0
@@ -1356,6 +1357,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html.
 	o veusz-1.26.1
 	o vfu-4.09
 	o vicq-0.4.2
+	o viewres-1.0.6
 	o vinagre-3.16.1
 	o vino-3.16.0
 	o virt-manager-1.3.2
