--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25159 2024/12/07 03:04:46 mef Exp $
+$NetBSD: TODO,v 1.25160 2024/12/08 08:38:51 wiz Exp $
 
 Suggested new packages
 ======================
@@ -633,6 +633,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o flow-tools-0.411
 	o fltk-1.4.0
 	o fluent-bit-1.7.4
+	o fluidsynth-2.4.1
 	o fortunes-calvin-0.3
 	o fortunes-de-0.34
 	o fplll-5.4.0
@@ -682,6 +683,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o gimp-docs-ru-2.10.0
 	o gimp-docs-sv-2.10.0
 	o gimp-docs-zh_CN-2.10.0
+	o git-filter-repo-2.47.0
 	o gitea-1.22.1
 	o gjs-1.70.1
 	o gkrellm-2.3.11
@@ -733,13 +735,13 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o gprolog-1.5.0 [adds arm64 support]
 	o gps-17.0
 	o grafana-11.1.0 [wip]
-	o grafana-11.3.1
+	o grafana-11.4.0
 	o grafx2-2.8.3137
 	o grantlee-5.0.0
 	o greed-4.2
 	o groff-1.23.0
 	o gromacs-2021.1
-	o grpc-1.68.0
+	o grpc-1.68.2
 	o gss-1.0.3
 	o gst-plugins1-omx-1.10.0
 	o gtklevel9-5.1
@@ -817,6 +819,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o jed-0.99-18
 	o jetty7-7.6.17
 	o jetty9-9.3.7
+	o jj-0.24.0
 	o jools-1.0
 	o jpilot-syncmal-0.81
 	o jrep-1.1.1
@@ -1120,7 +1123,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o privoxy-3.0.33
 	o profit-2.5.3
 	o prometheus-3.0.1
-	o protobuf-29.0
+	o protobuf-29.1
 	o ps2eps-1.70
 	o psmisc-22.20
 	o pspp-1.4.1
@@ -1138,12 +1141,15 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-ephem3-3.7.6.0
 	o py-fecon235-6.18.1203
 	o py-filebytes-0.10.2
+	o py-fonttools-4.55.2
 	o py-gammu-3.1
 	o py-gcovr-6.0
-	o py-grpcio-1.68.0
+	o py-grpcio-1.68.1
 	o py-hgview-1.9.0
+	o py-httpx-0.28.1
 	o py-hyperscan-0.7.7
 	o py-input-pad-1.4.2
+	o py-mako-1.3.8
 	o py-mitmproxy_rs-0.9.3
 	o py-musicbrainz-0.7.4
 	o py-musicbrainz-ngs-0.7.1
@@ -1151,13 +1157,19 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-pdf-parser-0.7.4
+	o py-pkginfo-1.12.0
 	o py-postgresql-5.1.2
-	o py-protobuf-5.29.0
+	o py-protobuf-5.29.1
 	o py-pytz_deprecation_shim-0.1.0.post0
+	o py-qt-builder-1.17.0
 	o py-quixote-3.3
+	o py-ruff-0.8.2
 	o py-sbws-1.1.0
 	o py-scgi-2.0
 	o py-simpletal-5.1
+	o py-sip-qt6-13.9.0
+	o py-sip6-6.9.0
+	o py-six-1.17.0
 	o py-sybase-0.37
 	o py-syslog-ng-3.31.2
 	o py-tokyocabinet-0.6
@@ -1322,6 +1334,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o torrentzip-2.1.0
 	o trafficserver-9.0.1
 	o transmission-4.0.4
+	o tree-sitter-php-0.23.11
+	o tree-sitter-python-0.23.5
 	o trimmomatic-0.39
 	o tripwire-2.3.1 [see also pkg/22362]
 	o trojita-0.7
@@ -1402,6 +1416,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o xmms-crossfade-0.3.14
 	o xmms-musepack-1.8.0 [http://dl.slik.org/musepack/xmms-musepack-1.8.0.tar.gz]
 	o xorp-1.8.5
+	o xournalpp-1.2.5
 	o xpad-5.4.0
 	o xpmroot-2.7.0
 	o xrmap-base-2.33.1
