--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25161 2024/12/08 16:48:42 taca Exp $
+$NetBSD: TODO,v 1.25162 2024/12/08 22:39:25 wiz Exp $
 
 Suggested new packages
 ======================
@@ -944,7 +944,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o mipsel-none-elf-gcc-9.3.0
 	o mit-scheme-bin-9.2
 	o modular-xorg-xwayland-24.1.3
-	o mold-2.33
+	o mold-2.35
 	o mono-nat-1.1.0
 	o monocypher-3.1.2
 	o mopher-0.6.0
@@ -1379,8 +1379,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o wap-utils-1.4.1
 	o wbm-virtual-server-6.16
 	o wcalc-2.4
-	o webkit-gtk-2.46.3 [wip]
-	o webkit-gtk-2.46.4
+	o webkit-gtk-2.46.4 [wip]
 	o webmin-2.0
 	o websvn-2.6.0
 	o wgetpaste-2.30
