--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25162 2024/12/08 22:39:25 wiz Exp $
+$NetBSD: TODO,v 1.25163 2024/12/09 11:28:16 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1273,6 +1273,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o strace-4.23
 	o stratagus-2.2.5.5
 	o streamtuner-2.2.0
+	o subversion-1.14.5
 	o sudo-1.9.16p2
 	o sup-0.4
 	o swapd-1.0.5
