--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25163 2024/12/09 11:28:16 wiz Exp $
+$NetBSD: TODO,v 1.25164 2024/12/09 22:55:54 wiz Exp $
 
 Suggested new packages
 ======================
@@ -769,6 +769,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o herisvm-0.8.2
 	o hesiod-3.2.1
 	o heyu-2.9.0
+	o himalaya-1.0
 	o hivex-1.3.19
 	o hmmer-3.1b2
 	o honggfuzz-2.5
