--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25164 2024/12/09 22:55:54 wiz Exp $
+$NetBSD: TODO,v 1.25165 2024/12/10 07:31:29 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1150,6 +1150,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-httpx-0.28.1
 	o py-hyperscan-0.7.7
 	o py-input-pad-1.4.2
+	o py-mailman-3.3.10
 	o py-mako-1.3.8
 	o py-mitmproxy_rs-0.9.3
 	o py-musicbrainz-0.7.4
