--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25165 2024/12/10 07:31:29 wiz Exp $
+$NetBSD: TODO,v 1.25166 2024/12/10 14:17:50 nia Exp $
 
 Suggested new packages
 ======================
@@ -633,7 +633,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o flow-tools-0.411
 	o fltk-1.4.0
 	o fluent-bit-1.7.4
-	o fluidsynth-2.4.1
 	o fortunes-calvin-0.3
 	o fortunes-de-0.34
 	o fplll-5.4.0
