--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25167 2024/12/10 14:43:17 nia Exp $
+$NetBSD: TODO,v 1.25168 2024/12/10 20:13:15 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1155,6 +1155,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-musicbrainz-0.7.4
 	o py-musicbrainz-ngs-0.7.1
 	o py-newt-0.52.21
+	o py-numpy-2.2.0
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-pdf-parser-0.7.4
