--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25169 2024/12/11 08:34:49 adam Exp $
+$NetBSD: TODO,v 1.25170 2024/12/11 09:51:41 pin Exp $
 
 Suggested new packages
 ======================
@@ -768,7 +768,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o herisvm-0.8.2
 	o hesiod-3.2.1
 	o heyu-2.9.0
-	o himalaya-1.0
 	o hivex-1.3.19
 	o hmmer-3.1b2
 	o honggfuzz-2.5
