doc: Updated devel/jj to 0.24.0

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25170 2024/12/11 09:51:41 pin Exp $
+$NetBSD: TODO,v 1.25171 2024/12/11 10:28:31 wiz Exp $
 
 Suggested new packages
 ======================
@@ -818,7 +818,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o jed-0.99-18
 	o jetty7-7.6.17
 	o jetty9-9.3.7
-	o jj-0.24.0
 	o jools-1.0
 	o jpilot-syncmal-0.81
 	o jrep-1.1.1
