Updated devel/py-dulwich, devel/py-pkginfo, devel/py-poetry

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25175 2024/12/11 10:42:07 wiz Exp $
+$NetBSD: TODO,v 1.25176 2024/12/11 12:35:16 adam Exp $
 
 Suggested new packages
 ======================
@@ -1155,7 +1155,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-omniORBpy-3.7
 	o py-onionbalance-0.2.2
 	o py-pdf-parser-0.7.4
-	o py-pkginfo-1.12.0
 	o py-postgresql-5.1.2
 	o py-protobuf-5.29.1
 	o py-pytz_deprecation_shim-0.1.0.post0
