--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25176 2024/12/11 12:35:16 adam Exp $
+$NetBSD: TODO,v 1.25177 2024/12/11 13:05:12 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1279,9 +1279,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o swi-prolog-packages-8.3.22
 	o syft-0.68.1
 	o sympa-6.2.72
-	o syncstorage-0.18.1
-	o syncstorage-rs-0.17.15 [wip]
-	o syncstorage-rs-0.18.2
 	o sysinfo-4.2.2
 	o system-tools-backends-2.10.1
 	o systrace-1.6e
