--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25177 2024/12/11 13:05:12 wiz Exp $
+$NetBSD: TODO,v 1.25178 2024/12/11 23:20:27 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1174,6 +1174,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o pythontidy-1.23
 	o q5go-2.1.1
 	o qconf-2.5
+	o qemu-9.2
 	o qt6-6.8.1
 	o qtcreator-13.0
 	o quazip-1.1
