--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25180 2024/12/12 17:28:19 wiz Exp $
+$NetBSD: TODO,v 1.25181 2024/12/13 22:03:43 wiz Exp $
 
 Suggested new packages
 ======================
@@ -742,6 +742,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o grpc-1.68.2
 	o gss-1.0.3
 	o gst-plugins1-omx-1.10.0
+	o gstreamer-1.24.10
 	o gtklevel9-5.1
 	o gtklife-5.2
 	o gtkmagnetic-23
@@ -848,6 +849,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o lcc-4.2
 	o ldapsdk-6.0.7
 	o lgeneral-1.3.1
+	o libICE-1.1.2
+	o libXrender-0.9.12
 	o libbaloo4-21.04.0
 	o libbpg-0.9.8
 	o libburn-1.5.4
