--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25181 2024/12/13 22:03:43 wiz Exp $
+$NetBSD: TODO,v 1.25182 2024/12/14 07:46:32 wiz Exp $
 
 Suggested new packages
 ======================
@@ -850,7 +850,11 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o ldapsdk-6.0.7
 	o lgeneral-1.3.1
 	o libICE-1.1.2
+	o libSM-1.2.5
+	o libXau-1.0.12
 	o libXrender-0.9.12
+	o libXv-1.0.13
+	o libXxf86vm-1.1.6
 	o libbaloo4-21.04.0
 	o libbpg-0.9.8
 	o libburn-1.5.4
@@ -888,7 +892,9 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libthai-0.2.2
 	o libtrace-4.0.16
 	o libvirt-10.0
+	o libxcvt-0.1.3
 	o libxdg-basedir-1.2.3
+	o libxshmfence-1.3.3
 	o libzookeeper-3.7.0
 	o lincvs-2.1.4 [now called CrossVC]
 	o liquidwar-6.0.0.11
