--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25182 2024/12/14 07:46:32 wiz Exp $
+$NetBSD: TODO,v 1.25183 2024/12/14 07:55:29 adam Exp $
 
 Suggested new packages
 ======================
@@ -742,7 +742,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o grpc-1.68.2
 	o gss-1.0.3
 	o gst-plugins1-omx-1.10.0
-	o gstreamer-1.24.10
 	o gtklevel9-5.1
 	o gtklife-5.2
 	o gtkmagnetic-23
