--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25183 2024/12/14 07:55:29 adam Exp $
+$NetBSD: TODO,v 1.25184 2024/12/14 12:40:52 wiz Exp $
 
 Suggested new packages
 ======================
@@ -848,7 +848,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o lcc-4.2
 	o ldapsdk-6.0.7
 	o lgeneral-1.3.1
-	o libICE-1.1.2
 	o libSM-1.2.5
 	o libXau-1.0.12
 	o libXrender-0.9.12
