--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25193 2024/12/14 12:44:20 wiz Exp $
+$NetBSD: TODO,v 1.25194 2024/12/15 08:45:52 wiz Exp $
 
 Suggested new packages
 ======================
@@ -604,6 +604,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o eric5-5.4.6
 	o es-0.83
 	o esh-0.8.5
+	o espeak-ng-1.52
 	o ess-18.10.2
 	o etach-1.4.1
 	o evas-buffer-1.7.10
@@ -728,6 +729,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o gok-2.30.1
 	o golem-0.0.6
 	o goocanvas-2.0.2
+	o gopls-0.17.0
 	o gossip-0.31
 	o gperiodic-3.0.3
 	o gprolog-1.5.0 [adds arm64 support]
@@ -853,6 +855,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libburn-1.5.4
 	o libcap-2.49
 	o libcarddav-14.0.13
+	o libcares-1.34.4
 	o libcec-6.0.2
 	o libdevq-0.0.4
 	o libdsk-1.5.19
@@ -865,6 +868,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libisofs-1.5.4
 	o libixp-0.5 [breaks wmii-3.6, wait for compatible version; see also wmii+ixp entry]
 	o libjit-1.0.2
+	o libjpeg-turbo-3.1.0
 	o libkactivities4-5.81.0
 	o liblzo-2.10
 	o libmcs-0.7.2
@@ -1053,6 +1057,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o papirus-folders-1.8.0
 	o parrot-8.1.0
 	o passenger-6.0.20
+	o pcaudiolib-1.3
 	o pcc-1.1.0 [can't be updated on x86_64 NetBSD! pcc-lib 1.1.0 as a requirement does not support x86_64 on NetBSD]
 	o pdf-redact-tools-0.1.2
 	o pdfpc-4.4.1
@@ -1128,7 +1133,9 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-HappyDoc-3.0
 	o py-MyHDL-0.11
 	o py-OTXv2-1.5.2
+	o py-aiosignal-1.3.2
 	o py-cassa-1.11.0
+	o py-certifi-2024.12.14
 	o py-configparser-5.0.0 [drops python-2.x support; pkgsrc only needs this package for python 2.x]
 	o py-cramjam-2.9.0
 	o py-dot-3.0.1
@@ -1137,12 +1144,17 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-filebytes-0.10.2
 	o py-gammu-3.1
 	o py-gcovr-6.0
+	o py-google-api-core-2.24.0
+	o py-google-api-python-client-2.155.0
+	o py-google-auth-2.37.0
 	o py-grpcio-1.68.1
 	o py-hgview-1.9.0
 	o py-hyperscan-0.7.7
 	o py-input-pad-1.4.2
+	o py-juliandate-1.0.5
 	o py-mailman-3.3.10
 	o py-mako-1.3.8
+	o py-matplotlib-3.10.0
 	o py-mitmproxy_rs-0.9.3
 	o py-musicbrainz-0.7.4
 	o py-musicbrainz-ngs-0.7.1
@@ -1153,19 +1165,24 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-pdf-parser-0.7.4
 	o py-postgresql-5.1.2
 	o py-protobuf-5.29.1
+	o py-pspdfutils-3.3.7
+	o py-pydantic-settings-2.7.0
 	o py-pytz_deprecation_shim-0.1.0.post0
 	o py-qt-builder-1.17.0
 	o py-quixote-3.3
+	o py-ruff-0.8.3
 	o py-sbws-1.1.0
 	o py-scgi-2.0
 	o py-simpletal-5.1
-	o py-sip-qt6-13.9.0
-	o py-sip6-6.9.0
+	o py-sip-qt6-13.9.1
+	o py-sip6-6.9.1
 	o py-six-1.17.0
 	o py-sybase-0.37
 	o py-syslog-ng-3.31.2
+	o py-textual-1.0.0
 	o py-tokyocabinet-0.6
 	o py-uliweb-0.6
+	o py-watchfiles-1.0.3
 	o py-yubiauth-0.3.10
 	o pythontidy-1.23
 	o q5go-2.1.1
@@ -1183,6 +1200,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o razor-qt-0.5.2
 	o rcs-5.10.0
 	o rdp-1.6
+	o re2c-4.0.1
 	o redis-7.4.1
 	o regionset-0.2
 	o remind-3.03.06
@@ -1325,6 +1343,8 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o torrentzip-2.1.0
 	o trafficserver-9.0.1
 	o transmission-4.0.4
+	o tree-sitter-0.24.5
+	o tree-sitter-elixir-0.3.3
 	o trimmomatic-0.39
 	o tripwire-2.3.1 [see also pkg/22362]
 	o trojita-0.7
@@ -1430,6 +1450,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o yices2-2.6.2
 	o yodl-4.03.03
 	o yorick-2.1.05
+	o yt-dlp-2024.12.13
 	o yubikey-manager-5.1.1
 	o yudit-3.0.7
 	o z-push-2.6.1
