--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25194 2024/12/15 08:45:52 wiz Exp $
+$NetBSD: TODO,v 1.25195 2024/12/15 09:49:31 adam Exp $
 
 Suggested new packages
 ======================
@@ -1450,7 +1450,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o yices2-2.6.2
 	o yodl-4.03.03
 	o yorick-2.1.05
-	o yt-dlp-2024.12.13
 	o yubikey-manager-5.1.1
 	o yudit-3.0.7
 	o z-push-2.6.1
