--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25195 2024/12/15 09:49:31 adam Exp $
+$NetBSD: TODO,v 1.25196 2024/12/16 07:59:18 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1406,6 +1406,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o xerces-j-2.4.0 [pkg/21725]
 	o xerces-j-2.9.0
 	o xf86-video-fbdev-0.5.1
+	o xfce-4.20
 	o xfpt-0.11
 	o xfractint-20.04p16
 	o xfs-1.1.1 [wip]
