--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25196 2024/12/16 07:59:18 wiz Exp $
+$NetBSD: TODO,v 1.25197 2024/12/17 03:42:16 taca Exp $
 
 Suggested new packages
 ======================
@@ -1218,6 +1218,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o rp-pppoe-3.11
 	o rpc2-2.14
 	o rpm-4.20
+	o rspamd-3.11
 	o rsyslog-8.2204.1
 	o rt4-4.4.4
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
