--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25197 2024/12/17 03:42:16 taca Exp $
+$NetBSD: TODO,v 1.25198 2024/12/18 08:48:14 wiz Exp $
 
 Suggested new packages
 ======================
@@ -845,7 +845,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o kqtquickcharts4-20.12.3
 	o kronolith-4.2.14
 	o ktorrent3-3.3.4
-	o latexmk-472b
+	o latexmk-486
 	o lbdb-49
 	o lcc-4.2
 	o ldapsdk-6.0.7
@@ -893,7 +893,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o lincvs-2.1.4 [now called CrossVC]
 	o liquidwar-6.0.0.11
 	o lirc-0.9.3
-	o llvm-19.1.5 [wip]
+	o llvm-19.1.6 [wip]
 	o lmbench-3
 	o log4cxx-0.11.0
 	o lohit-fonts-2.4.2
@@ -943,6 +943,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o mipsel-none-elf-binutils-2.36.1
 	o mipsel-none-elf-gcc-9.3.0
 	o mit-scheme-bin-9.2
+	o modular-xorg-server-21.1.15
 	o modular-xorg-xwayland-24.1.3
 	o mold-2.35
 	o mono-nat-1.1.0
@@ -1212,6 +1213,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o root-tail-1.2
 	o ropper-1.13.6
 	o rosegarden-21.12 [updating wip; audio/rosegarden -> rosegarden-x11]
+	o routinator-0.14.0
 	o rox-session-0.29
 	o roxirc-2.0
 	o rp-l2tp-0.4
