doc/TODO: + libuuid-2.40.2, wayland-protocols-1.39.

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25199 2024/12/20 14:33:10 taca Exp $
+$NetBSD: TODO,v 1.25200 2024/12/21 07:40:39 wiz Exp $
 
 Suggested new packages
 ======================
@@ -887,6 +887,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o libslang2-2.3.2
 	o libthai-0.2.2
 	o libtrace-4.0.16
+	o libuuid-2.40.2
 	o libvirt-10.0
 	o libxdg-basedir-1.2.3
 	o libzookeeper-3.7.0
@@ -1390,6 +1391,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o wMosaic-3.8.22
 	o wandio-4.2.3
 	o wap-utils-1.4.1
+	o wayland-protocols-1.39
 	o wbm-virtual-server-6.16
 	o wcalc-2.4
 	o webkit-gtk-2.46.4 [wip]
