--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25205 2024/12/24 12:02:41 adam Exp $
+$NetBSD: TODO,v 1.25206 2024/12/24 14:36:03 taca Exp $
 
 Suggested new packages
 ======================
@@ -1074,8 +1074,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o pgpdump-0.33
 	o phoronix-9.2.1
 	o phoronix-test-suite-10.8
-	o php-8.2.27
-	o php-8.3.15
 	o php-8.4.2
 	o php-basercms-5.0.8
 	o php-dotclear-2.29
