--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25206 2024/12/24 14:36:03 taca Exp $
+$NetBSD: TODO,v 1.25207 2024/12/24 15:36:07 adam Exp $
 
 Suggested new packages
 ======================
@@ -972,8 +972,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o ncview-2.1.8
 	o netramet-50
 	o newmail-1.0.2
-	o nghttp3-1.7.0
-	o ngtcp2-1.10.0 [NetBSD's openssl does not provide QUIC support]
 	o nicotine-plus-3.2.9
 	o nios2-binutils-2.36.1
 	o ns-3.14.1
@@ -1012,7 +1010,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o openmortal-0.7.1
 	o openmpi-5.0.5
 	o openslp-2.0.0
-	o openssl-3.4.0
 	o openxenmanager-0.83
 	o opera-26
 	o or1k-none-elf-binutils-2.36.1
