--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25213 2024/12/25 22:02:22 adam Exp $
+$NetBSD: TODO,v 1.25214 2024/12/26 10:58:01 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1344,7 +1344,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o torrentzip-2.1.0
 	o trafficserver-9.0.1
 	o transmission-4.0.4
-	o tree-sitter-0.24.5
 	o tree-sitter-elixir-0.3.3
 	o tree-sitter-java-0.23.5
 	o trimmomatic-0.39
