--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25226 2024/12/26 12:02:09 wiz Exp $
+$NetBSD: TODO,v 1.25227 2024/12/26 22:23:24 adam Exp $
 
 Suggested new packages
 ======================
@@ -1179,7 +1179,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o q5go-2.1.1
 	o qconf-2.5
 	o qemu-9.2
-	o qt6-6.8.1
 	o qtcreator-13.0
 	o quazip-1.1
 	o qutebrowser-3.0.1
