--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25231 2024/12/26 23:51:09 adam Exp $
+$NetBSD: TODO,v 1.25232 2024/12/27 08:48:12 wiz Exp $
 
 Suggested new packages
 ======================
@@ -877,7 +877,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o librdkafka-1.6.1
 	o librelp-1.10.0
 	o libretro-core-info-1.9.1
-	o librsvg-2.59.2
 	o libslang-2.2.4
 	o libslang2-2.3.2
 	o libthai-0.2.2
@@ -1272,7 +1271,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o sudo-1.9.16p2
 	o sup-0.4
 	o swapd-1.0.5
-	o swi-prolog-8.3.22
+	o swi-prolog-9.2.9
 	o swi-prolog-jpl-8.3.22
 	o swi-prolog-lite-8.3.22
 	o swi-prolog-packages-8.3.22
