--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25240 2024/12/27 09:31:07 wiz Exp $
+$NetBSD: TODO,v 1.25241 2024/12/27 11:17:26 adam Exp $
 
 Suggested new packages
 ======================
@@ -1162,7 +1162,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o pythontidy-1.23
 	o q5go-2.1.1
 	o qconf-2.5
-	o qemu-9.2
 	o qtcreator-13.0
 	o quazip-1.1
 	o qutebrowser-3.0.1
