--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25241 2024/12/27 11:17:26 adam Exp $
+$NetBSD: TODO,v 1.25242 2024/12/28 09:53:28 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1191,7 +1191,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o rp-pppoe-3.11
 	o rpc2-2.14
 	o rpm-4.20
-	o rspamd-3.11
 	o rsyslog-8.2204.1
 	o rt4-4.4.4
 	o rtty-4.0 [at ftp://ftp.isc.org/isc/rtty/]
