--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25243 2024/12/28 14:10:39 wiz Exp $
+$NetBSD: TODO,v 1.25244 2024/12/28 21:40:56 adam Exp $
 
 Suggested new packages
 ======================
@@ -1139,8 +1139,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o py-mailman-3.3.10
 	o py-matplotlib-3.10.0
 	o py-mitmproxy_rs-0.9.3
-	o py-musicbrainz-0.7.4
-	o py-musicbrainz-ngs-0.7.1
 	o py-newt-0.52.21
 	o py-numpy-2.2.1
 	o py-omniORBpy-3.7
