doc: Updated audio/SDL2_mixer to 2.8.0

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.25324 2025/01/19 15:35:07 ktnb Exp $
+$NetBSD: TODO,v 1.25325 2025/01/19 18:13:59 wiz Exp $
 
 Suggested new packages
 ======================
@@ -404,7 +404,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o R-RSQLite-2.6
 	o R-mapproj-3
 	o R-ncdf-1.6.9
-	o SDL2_mixer-2.8.0
 	o SOGo5-5.11.1 [wip]
 	o SOPE5-5.11.1 [wip]
 	o SQLiteCpp-2.5.0
